Fix experience overflow issue

--- a/src/app/layouts/experiences/experiences.component.scss
+++ b/src/app/layouts/experiences/experiences.component.scss
@@ -85,7 +85,10 @@
           &--detail {
             font-size: 1.5rem;
             color: $color_text_light;
-            line-height: 3rem;
+            & > li {
+              margin: 1rem 0;
+              line-height: 3rem;
+            }
           }
         }
         &--edu {
